--- a/FlagpoleWeb/style.css
+++ b/FlagpoleWeb/style.css
@@ -3,7 +3,7 @@ body {
     background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); */
    background-image: url("back.gif"); /* The image used */
    background-color: #cccccc; /* Used if the image is unavailable */
-   height: 500px; /* You must set a specified height */
+   height: 555px; /* You must set a specified height */
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover
@@ -18,7 +18,7 @@ body {
   }
   .graphs{
     position: absolute;
-    top: 10%;
+    top: 0%;
     right: 0%;
     width: 100%;
     height: 80%;
@@ -51,7 +51,7 @@ body {
   .gD{
     position: absolute;
     top: 50%;
-    right: 80%;
+    right: 70%;
     width: 30%;
     height: 45%;
     /* background-color: red; */
@@ -59,7 +59,23 @@ body {
   .gP{
     position: absolute;
     top: 50%;
-    right: 50%;
+    right: 35%;
+    width: 30%;
+    height: 45%;
+    /* background-color: red; */
+  }
+  .gA{
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    width: 30%;
+    height: 45%;
+    /* background-color: red; */
+  }
+  .gO{
+    position: absolute;
+    top: 50%;
+    right: 0%;
     width: 30%;
     height: 45%;
     /* background-color: red; */
