--- a/FlagpoleWeb/style.css
+++ b/FlagpoleWeb/style.css
@@ -1,17 +1,11 @@
 body {
-    /* background-color: #b1bfd8;
-    background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%); */
     background-image: url("back.gif");
-    /* The image used */
-    background-color: #cccccc;
-    /* Used if the image is unavailable */
-    height: 555px;
-    /* You must set a specified height */
+    background-color: #276baf;
+    height: 844px;
     background-position: center;
-    /* Center the image */
     background-repeat: no-repeat;
-    /* Do not repeat the image */
-    background-size: cover
+    background-size: cover;
+    position: relative;
 }
 
 .title {
@@ -25,15 +19,15 @@ body {
 }
 
 .logo {
-    height: 200%;
+    height: 250%;
 }
 
 .graphs {
     position: absolute;
-    top: 15%;
+    top: 20%;
     right: 0%;
     width: 100%;
-    height: 80%;
+    height: 75%;
 }
 
 .gT {
